<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_system</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="leejinyien@gmail.com">JinYien</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>custom_message</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>fastlio</exec_depend>
  <exec_depend>fastlio_adapter</exec_depend>
  <exec_depend>fastlio_converter</exec_depend>
  <exec_depend>livox_driver</exec_depend>
  <exec_depend>oakd_driver</exec_depend>
  <exec_depend>teensy_driver</exec_depend>
  <exec_depend>sound_driver</exec_depend>
  <exec_depend>web_interface</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
